# ML-Testing

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: clean_counter.py  config.py  confusion_matrix_generator.py  data.py  eval.py  main.py  preprocess.py  train.py
tests/: conftest.py  test_model.py  test_preprocess.py
tools/: get_data.py  query.sql
